--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -98,5 +98,6 @@ runtime-benchmarks = [
 	"pallet-balances/runtime-benchmarks",
 	"pallet-template/runtime-benchmarks",
 	"pallet-timestamp/runtime-benchmarks",
+	"pallet-kitties/runtime-benchmarks",
 	"sp-runtime/runtime-benchmarks",
 ]
