--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -52,6 +52,7 @@ pallet-template = { version = "4.0.0-dev", default-features = false, path = "../
 pallet-kitties = { version = "4.0.0-dev", default-features = false, path = "../pallets/kitties" }
 pallet-loosely-coupling = { default-features = false, path = '../pallets/loosely-coupling', version = '4.0.0-dev' }
 pallet-tightly-coupling = { default-features = false, path = '../pallets/tightly-coupling', version = '4.0.0-dev' }
+pallet-kitties-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, path = "../pallets/kitties/rpc/runtime-api" }
 
 [build-dependencies]
 substrate-wasm-builder = { version = "5.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
@@ -72,6 +73,7 @@ std = [
 	"pallet-sudo/std",
 	"pallet-template/std",
 	"pallet-kitties/std",
+	"pallet-kitties-rpc-runtime-api/std",
 	"pallet-loosely-coupling/std",
 	"pallet-tightly-coupling/std",
 	"pallet-timestamp/std",
