--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -55,6 +55,10 @@ frame-benchmarking-cli = { version = "4.0.0-dev", git = "https://github.com/pari
 # Local Dependencies
 node-template-runtime = { version = "4.0.0-dev", path = "../runtime" }
 
+pallet-kitties-rpc = { version = "4.0.0-dev", path = "../pallets/kitties/rpc" }
+pallet-kitties-rpc-runtime-api = { version = "4.0.0-dev", path = "../pallets/kitties/rpc/runtime-api" }
+
+
 [build-dependencies]
 substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
 
