--- a/pallets/kitties/rpc/runtime-api/Cargo.toml
+++ b/pallets/kitties/rpc/runtime-api/Cargo.toml
@@ -15,10 +15,14 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
 sp-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
+pallet-kitties = { version = "4.0.0-dev", default-features = false, path = "../../../kitties" }
+sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.17", version = '4.0.0-dev' }
 
 [features]
 default = ["std"]
 std = [
 	"codec/std",
 	"sp-api/std",
+	"sp-std/std",
+	"pallet-kitties/std"
 ]
